Sat Oct 22 10:28:28 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (DLDFLAGS): fallback to LDFLAGS.
	  [ruby-core:72444] [Bug #11863]

	* configure.in (LIBRUBY_DLDFLAGS): fallback to DLDFLAGS.

	* configure.in (RUBY_APPEND_OPTION, RUBY_PREPEND_OPTION): expand
	  the option to be appended/prepended when matching, as well as
	  RUBY_APPEND_OPTIONS and  RUBY_PREPEND_OPTIONS.

Sat Oct 22 09:52:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (setup_args): duplicate splatting array if more
	  arguments present to obey left-to-right execution order.
	  [ruby-core:77701] [Bug# 12860]

Fri Oct 21 16:44:44 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (do_opendir): retry after GC when the limit for open file
	  descriptors reached.

Fri Oct 21 16:06:25 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (open_load_file): retry after GC when the limit for open
	  file descriptors reached.

Fri Oct 21 11:34:17 2016  Pascal Schmid  <Lechindianer@users.noreply.github.com>

	* string.c (rb_str_sub, rb_str_gsub): [DOC] 'backlash' should read
	  'backslash'.  [Fix GH-1461]

Thu Oct 20 17:02:56 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/uri/common.rb: added documentation for deprecated method.
	  [Misc #11960][ruby-core:72733][ci skip]

Thu Oct 20 16:57:23 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/digest/digest.c: Add documentation for Digest.
	  [Feature #10452][ruby-core:66001][ci skip]
	  * remove HMAC from list of digest algorithms,
	  * add MD5 in list of digest algorithms,
	  * add information about writing a C digest implementation using Digest::Base,
	  * add documentation for Digest::Base public methods.
	* ext/digest/md5/md5init.c: add examples for MD5.
	* ext/digest/rmd160/rmd160init.c: add examples for Digest::RMD160.
	* ext/digest/sha1/sha1init.c: add examples for Digest::SHA1.

Thu Oct 20 16:19:51 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/open-uri.rb: Improved documentation grammar for